k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpio-api
  namespace: gpio-api
spec:
  ports:
  - port: 8080
    targetPort: 8080
  # externalIPs:
  # - 192.168.1.10
  selector:
    app: gpio-api
